--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
     </div>
     <div class="nav">
         <div class="nav__items">
-            <a href="#aboutus" class="nav__item">O nas</a>
-            <a href="#offer" class="nav__item">Oferta</a>
-            <a href="#price" class="nav__item">Cennik</a>
-            <a href="#faq" class="nav__item">FAQ</a>
+    <nav>
+        <ul>
+            <li><a href="/">GŁOWNA</a></li>
+            <li><a href="/onas.html">O nas</a></li>
+            <li><a href="/oferta.html">Oferta</a></li>
+            <li><a href="/cennik.html">Cennik</a></li>
+            <li><a href="/faq.html">FAQ</a></li>
+        </ul>
+    </nav>
         </div>
     </div>
     <div class="header">
