--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="nav__items">
     <nav>
         <ul>
-            <li><a href="/">GŁOWNA</a></li>
-            <li><a href="/onas.html">O nas</a></li>
-            <li><a href="/oferta.html">Oferta</a></li>
-            <li><a href="/cennik.html">Cennik</a></li>
-            <li><a href="/faq.html">FAQ</a></li>
+            <li><a href="/" class="nav__item">GŁOWNA</a></li>
+            <li><a href="/onas.html" class="nav__item">O nas</a></li>
+            <li><a href="/oferta.html" class="nav__item">Oferta</a></li>
+            <li><a href="/cennik.html" class="nav__item">Cennik</a></li>
+            <li><a href="/faq.html" class="nav__item">FAQ</a></li>
         </ul>
     </nav>
         </div>
@@ -58,11 +58,11 @@
                 <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="../dist/img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="../dist/img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src=" ../dist/img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src=" ../dist/img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="../dist/img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="../dist/img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
