--- a/index.html
+++ b/index.html
@@ -11,38 +11,129 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/dist/css/main.min.css">
+    <style>
+        /* Dodaj własne style i animacje */
+        body {
+            font-family: 'Sora', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        .navbar {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+            display: flex;
+            justify-content: space-between;
+        }
+        .nav__item {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
+            padding: 0.5rem 1rem;
+        }
+        .nav__item--active {
+            background-color: #fff;
+            color: #333;
+            border-radius: 5px;
+        }
+        .header {
+            background-image: url('../dist/img/header-bg.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+        .header__text {
+            font-size: 2.5rem;
+            color: #fff;
+            margin-bottom: 1rem;
+        }
+        .header__text--colorized {
+            color: #f55;
+            font-weight: bold;
+        }
+        .header__cta {
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.2rem;
+            background-color: #f55;
+            padding: 1rem 2rem;
+            border-radius: 5px;
+        }
+        .section {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        .about-us__textbox {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .about-us__text {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin-bottom: 1rem;
+            color: #333;
+        }
+        .about-us__link {
+            color: #f55;
+            text-decoration: underline;
+        }
+        .about-us__box {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 2rem;
+        }
+        .about-us__img {
+            width: 100%;
+            max-width: 400px;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 1rem;
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 2rem;
+        }
+        .footer__text {
+            font-size: 1rem;
+            color: #fff;
+        }
+        .footer__link {
+            color: #f55;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
 
     <div class="navbar">
         <a href="#home" class="logo">LOGO</a>
-        <button class="burger" onclick="">
-            <div class="burger__lines burger__lines-line1"></div>
-            <div class="burger__lines burger__lines-line2"></div>
-            <div class="burger__lines burger__lines-line3"></div>
-        </button>
+        <nav>
+            <a href="/" class="nav__item">GŁOWNA</a>
+            <a href="/onas.html" class="nav__item">O nas</a>
+            <a href="/oferta.html" class="nav__item">Oferta</a>
+            <a href="/cennik.html" class="nav__item">Cennik</a>
+            <a href="/faq.html" class="nav__item">FAQ</a>
+        </nav>
     </div>
-    <div class="nav">
-        <div class="nav__items">
-    <nav>
-        <ul>
-            <li><a href="/" class="nav__item">GŁOWNA</a></li>
-            <li><a href="/onas.html" class="nav__item">O nas</a></li>
-            <li><a href="/oferta.html" class="nav__item">Oferta</a></li>
-            <li><a href="/cennik.html" class="nav__item">Cennik</a></li>
-            <li><a href="/faq.html" class="nav__item">FAQ</a></li>
-        </ul>
-    </nav>
-        </div>
-    </div>
+
     <div class="header">
         <div class="header__title">
             <p class="header__text">Zarządzaj swoimi planami treningowymi i dietą <span
                     class="header__text--colorized">w
                     jednym miejscu</span>
             </p>
-            <a href="#joinnow" class="nav__item nav__item--active">Sprawdź ofertę!</a>
+            <a href="#joinnow" class="header__cta">Sprawdź ofertę!</a>
         </div>
     </div>
 
@@ -66,6 +157,11 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+                class="footer__link">Privacy Policy</a></p>
+    </footer>
 
     <script src=" /dist/js/main.min.js"></script>
 </body>
