--- a/index.html
+++ b/index.html
@@ -5,113 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness Website</title>
+    <title>Fitness Website | DAWID OLKO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/dist/css/main.min.css">
-    <style>
-        /* Dodaj własne style i animacje */
-        body {
-            font-family: 'Sora', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        .navbar {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-            display: flex;
-            justify-content: space-between;
-        }
-        .nav__item {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-            padding: 0.5rem 1rem;
-        }
-        .nav__item--active {
-            background-color: #fff;
-            color: #333;
-            border-radius: 5px;
-        }
-        .header {
-            background-image: url('../dist/img/header-bg.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 70vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-        .header__text {
-            font-size: 2.5rem;
-            color: #fff;
-            margin-bottom: 1rem;
-        }
-        .header__text--colorized {
-            color: #f55;
-            font-weight: bold;
-        }
-        .header__cta {
-            text-decoration: none;
-            color: #fff;
-            font-size: 1.2rem;
-            background-color: #f55;
-            padding: 1rem 2rem;
-            border-radius: 5px;
-        }
-        .section {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-        .about-us__textbox {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        .about-us__text {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: 1rem;
-            color: #333;
-        }
-        .about-us__link {
-            color: #f55;
-            text-decoration: underline;
-        }
-        .about-us__box {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            margin-top: 2rem;
-        }
-        .about-us__img {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-        }
-        .footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 2rem;
-        }
-        .footer__text {
-            font-size: 1rem;
-            color: #fff;
-        }
-        .footer__link {
-            color: #f55;
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -149,11 +48,11 @@
                 <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="../dist/img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src=" ../dist/img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="../dist/img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
@@ -163,7 +62,7 @@
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 
-    <script src=" /dist/js/main.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
