--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="navbar">
-        <a href="#home" class="logo">LOGO</a>
+        <a href="/" class="logo">LOGO</a>
         <nav>
             <a href="/" class="nav__item">GŁOWNA</a>
             <a href="/onas.html" class="nav__item">O nas</a>
@@ -28,11 +28,12 @@
 
     <div class="header">
         <div class="header__title">
-            <p class="header__text">Zarządzaj swoimi planami treningowymi i dietą <span
-                    class="header__text--colorized">w
-                    jednym miejscu</span>
+            <p class="header__text">Zarządzaj swoimi planami treningowymi i dietą 
+                <span>
+                    class="header__text--colorized">w jednym miejscu
+                </span>
             </p>
-            <a href="#joinnow" class="header__cta">Sprawdź ofertę!</a>
+            <a href="/oferta" class="header__cta">Sprawdź ofertę!</a>
         </div>
     </div>
 
@@ -48,11 +49,11 @@
                 <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="dist/img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src="img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="dist/img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="dist/img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
