--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness Website | PROJEKT</title>
+    <title>Fitness Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
@@ -16,24 +16,23 @@
 <body>
 
     <div class="navbar">
-        <a href="/" class="logo">LOGO</a>
+        <a href="#home" class="logo">LOGO</a>
         <nav>
-            <a href="/" class="nav__item">GŁOWNA</a>
-            <a href="/onas.html" class="nav__item">O nas</a>
-            <a href="/oferta.html" class="nav__item">Oferta</a>
-            <a href="/cennik.html" class="nav__item">Cennik</a>
-            <a href="/faq.html" class="nav__item">FAQ</a>
+            <a href="#home" class="nav__item">GŁOWNA</a>
+            <a href="#about" class="nav__item">O nas</a>
+            <a href="#services" class="nav__item">Oferta</a>
+            <a href="#pricing" class="nav__item">Cennik</a>
+            <a href="#faq" class="nav__item">FAQ</a>
         </nav>
     </div>
 
     <div class="header">
         <div class="header__title">
-            <p class="header__text">Zarządzaj swoimi planami treningowymi i dietą 
-                <span>
-                    class="header__text--colorized">w jednym miejscu
-                </span>
+            <p class="header__text">Zarządzaj swoimi planami treningowymi i dietą <span
+                    class="header__text--colorized">w
+                    jednym miejscu</span>
             </p>
-            <a href="/oferta" class="header__cta">Sprawdź ofertę!</a>
+            <a href="#joinnow" class="header__cta">Sprawdź ofertę!</a>
         </div>
     </div>
 
@@ -49,11 +48,11 @@
                 <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="dist/img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src="dist/img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="dist/img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
