--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
 
     <div class="navbar">
-        <a href="#home" class="logo">LOGO</a>
+        <a href="#home" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
-            <a href="#home" class="nav__item">GŁOWNA</a>
-            <a href="#about" class="nav__item">O nas</a>
-            <a href="#services" class="nav__item">Oferta</a>
-            <a href="#pricing" class="nav__item">Cennik</a>
-            <a href="#faq" class="nav__item">FAQ</a>
+            <a href="/" class="nav__item">GŁOWNA</a>
+            <a href="/onas" class="nav__item">O nas</a>
+            <a href="/oferta" class="nav__item">Oferta</a>
+            <a href="/cennik" class="nav__item">Cennik</a>
+            <a href="/faq" class="nav__item">FAQ</a>
         </nav>
     </div>
 
