--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     class="header__text--colorized">w
                     jednym miejscu</span>
             </p>
-            <a href="#joinnow" class="header__cta">Sprawdź ofertę!</a>
+            <a href="/dolaczdonas" class="header__cta">Sprawdź ofertę!</a>
         </div>
     </div>
 
@@ -45,7 +45,7 @@
                     analizowania ich postępów i codziennej komunikacji. Wykonuj swoją pracę lepiej, szybciej i
                     gdziekolwiek
                     się znajdujesz. LOGO dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
-                <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
+                <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
                 <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
@@ -58,7 +58,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 
