--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness Website</title>
+    <title>Strona Fitness - PROJEKT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
 
     <div class="navbar">
-        <a href="#home" class="logo"><img src="img/logo.png" alt="Logo"></a>
+        <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
             <a href="/" class="nav__item">GŁOWNA</a>
             <a href="/onas" class="nav__item">O nas</a>
