--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <div class="navbar">
         <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
-            <a href="/" class="nav__item">GŁOWNA</a>
-            <a href="/onas" class="nav__item">O nas</a>
-            <a href="/oferta" class="nav__item">Oferta</a>
-            <a href="/cennik" class="nav__item">Cennik</a>
-            <a href="/faq" class="nav__item">FAQ</a>
+            <ul>
+                <li><a href="/" class="nav__item">GŁOWNA</a></li>
+                <li><a href="/onas" class="nav__item">O nas</a></li>
+                <li><a href="/oferta" class="nav__item">Oferta</a></li>
+                <li><a href="/cennik" class="nav__item">Cennik</a></li>
+                <li><a href="/faq" class="nav__item">FAQ</a></li>
+            </ul>
         </nav>
     </div>
 
