--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
             <ul>
-                <li><a href="/" class="nav__item">GŁOWNA</a></li>
+                <li><a href="/" class="nav__item">Strona główna</a></li>
                 <li><a href="/onas" class="nav__item">O nas</a></li>
                 <li><a href="/oferta" class="nav__item">Oferta</a></li>
                 <li><a href="/cennik" class="nav__item">Cennik</a></li>
@@ -45,11 +45,11 @@
         <section class="section about-us">
             <h2 class="section__heading">O nas</h2>
             <div class="about-us__textbox">
-                <p class="about-us__text">LOGO to narzędzie służące do zarządzania planami treningowymi Twoich
+                <p class="about-us__text">FitnessGym to narzędzie służące do zarządzania planami treningowymi Twoich
                     zawodników,
                     analizowania ich postępów i codziennej komunikacji. Wykonuj swoją pracę lepiej, szybciej i
                     gdziekolwiek
-                    się znajdujesz. LOGO dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
+                    się znajdujesz. FitnessGym dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
                 <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
