--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
             <ul>
-                <li><a href="/" class="nav__item">STRONA GŁÓWNA</a></li>
-                <li><a href="/onas" class="nav__item">O NAS</a></li>
-                <li><a href="/oferta" class="nav__item">OFERTA</a></li>
-                <li><a href="/cennik" class="nav__item">CENNIK</a></li>
+                <li><a href="/" class="nav__item">Strona główna</a></li>
+                <li><a href="/onas" class="nav__item">O nas</a></li>
+                <li><a href="/oferta" class="nav__item">Oferta</a></li>
+                <li><a href="/cennik" class="nav__item">Cennik</a></li>
                 <li><a href="/faq" class="nav__item">FAQ</a></li>
             </ul>
         </nav>
@@ -53,11 +53,11 @@
                 <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src="img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
