--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 </head>
 
 <body>
+
     <div class="navbar">
         <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
         <nav>
             <ul>
-                <li><a href="/" class="nav__item">STRONA GŁÓWNA</a></li>
-                <li><a href="/onas" class="nav__item">O NAS</a></li>
-                <li><a href="/oferta" class="nav__item">OFERTA</a></li>
-                <li><a href="/cennik" class="nav__item">CENNIK</a></li>
-                <li><a href="/faq" class="nav__item">FAQ</a></li>
+                <li><a href="/" class="nav__item">Strona główna</a></li>
+                <li><a href="/onas" class="nav__item">O nas</a></li>
+                <li><a href="/oferta" class="nav__item">Oferta</a></li>
+                <li><a href="/cennik" class="nav__item">Cennik</a></li>
+                <li><a href="/faq" class="nav__item">Faq</a></li>
             </ul>
         </nav>
     </div>
