--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Fitness - PROJEKT</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="icon" type="img/png" href="img/m_logo.png">
+    <title>Fitness Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,15 +16,13 @@
 <body>
 
     <div class="navbar">
-        <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
+        <a href="#home" class="logo">LOGO</a>
         <nav>
-            <ul>
-                <li><a href="/" class="nav__item">Strona główna</a></li>
-                <li><a href="/onas" class="nav__item">O nas</a></li>
-                <li><a href="/oferta" class="nav__item">Oferta</a></li>
-                <li><a href="/cennik" class="nav__item">Cennik</a></li>
-                <li><a href="/faq" class="nav__item">Faq</a></li>
-            </ul>
+            <a href="#home" class="nav__item">GŁOWNA</a>
+            <a href="#about" class="nav__item">O nas</a>
+            <a href="#services" class="nav__item">Oferta</a>
+            <a href="#pricing" class="nav__item">Cennik</a>
+            <a href="#faq" class="nav__item">FAQ</a>
         </nav>
     </div>
 
@@ -37,7 +32,7 @@
                     class="header__text--colorized">w
                     jednym miejscu</span>
             </p>
-            <a href="/dolaczdonas" class="header__cta">Sprawdź ofertę!</a>
+            <a href="#joinnow" class="header__cta">Sprawdź ofertę!</a>
         </div>
     </div>
 
@@ -45,12 +40,12 @@
         <section class="section about-us">
             <h2 class="section__heading">O nas</h2>
             <div class="about-us__textbox">
-                <p class="about-us__text">FitnessGym to narzędzie służące do zarządzania planami treningowymi Twoich
+                <p class="about-us__text">LOGO to narzędzie służące do zarządzania planami treningowymi Twoich
                     zawodników,
                     analizowania ich postępów i codziennej komunikacji. Wykonuj swoją pracę lepiej, szybciej i
                     gdziekolwiek
-                    się znajdujesz. FitnessGym dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
-                <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
+                    się znajdujesz. LOGO dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
+                <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
                 <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
@@ -63,11 +58,9 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 
     <script src="main.js"></script>
 </body>
-
-</html>
