--- a/index.html
+++ b/index.html
@@ -1,32 +1,232 @@
 <!DOCTYPE html>
-<html lang="pl">
 
 <head>
+    <title>Strona Fitness - PROJEKT</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Fitness - PROJEKT</title>
     <link rel="icon" type="img/png" href="img/m_logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="img/m_logo.png">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+        /* Dodaj własne style i animacje */
+    body {
+        font-family: 'Sora', sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+    }
+    #tooltip .icon {
+        margin: 0 10px;
+        color: #334;
+        background-color: #ddd;
+        border-radius: 50%;
+        padding: 10px;
+    }
+
+    .icon {
+        transition: transform .2s;
+    }
+
+    .icon:hover {
+        transform: scale(1.2);
+    }
+    .icon {
+        margin: 10px;
+    }
+    .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        color: #fff;
+        padding: 1rem;
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .logo img {
+        width: 90px;
+    }    
+    nav {
+            background-color: #222;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            font-size: 18px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #ccc;
+            transition: color 0.3s, border-bottom-color 0.3s;
+            border-bottom: 2px solid transparent;
+            position: relative;
+        }
+
+        nav ul li a:before {
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #fff;
+            visibility: hidden;
+            transition: all 0.3s ease-in-out;
+        }
+
+        nav ul li a:hover {
+            color: #fff;
+            border-bottom-color: #fff;
+        }
+
+        nav ul li a:hover:before {
+            visibility: visible;
+            width: 100%;
+        }
+
+        nav ul li a.active {
+            color: #fff;
+            border-bottom-color: #fff;
+        }
+    .nav {
+        position: relative;
+        transition: transform 0.3s ease;
+    }
+
+    .nav:hover {
+        transform: translateY(-3px);
+    }
+    .header {
+        background-image: url('img/header-bg.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 70vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .header__text {
+        font-size: 2.5rem;
+        color: #fff;
+        margin-bottom: 1rem;
+    }
+    .header__text--colorized {
+        color: #f55;
+        font-weight: bold;
+    }
+    .header__cta {
+        text-decoration: none;
+        color: #fff;
+        font-size: 1.2rem;
+        background-color: #f55;
+        padding: 1rem 2rem;
+        border-radius: 5px;
+    }
+    .section {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+    }
+    .section__heading {
+        font-size: 2rem;
+        color: #f55;
+        margin-bottom: 2rem;
+        transition: transform 0.3s ease;
+    }
+
+    .section__heading:hover {
+        transform: scale(1.2);
+    }
+    .about-us__textbox {
+        max-width: 600px;
+        margin: 0 auto;
+    }    
+    .about-us__text {
+        font-size: 1.1rem;
+        line-height: 1.8;
+        margin-bottom: 1rem;
+        color: #333;
+    }
+    .about-us__link {
+    color: #f55;
+    text-decoration: underline;
+    }
+    .about-us__box {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 2rem;
+    }
+    .about-us__img {
+        width: 100%;
+        max-width: 400px;
+        height: auto;
+        border-radius: 5px;
+        margin-bottom: 1rem;
+    }
+    .footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 2rem;
+    }
+    .footer__text {
+        font-size: 1rem;
+        color: #fff;
+    }
+    .footer__link {
+        color: #f55;
+        text-decoration: underline;
+    }
+    .section__heading, .about-us__text, .about-us__img {
+        transition: transform 0.3s ease;
+    }
+
+    .section__heading:hover, .about-us__text:hover, .about-us__img:hover {
+        transform: scale(1.1);
+    }
+    </style>
 </head>
 
 <body>
-
-    <div class="navbar">
-        <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
-        <nav>
-            <ul>
-                <li><a href="/" class="nav__item">Strona główna</a></li>
-                <li><a href="/onas" class="nav__item">O nas</a></li>
-                <li><a href="/oferta" class="nav__item">Oferta</a></li>
-                <li><a href="/cennik" class="nav__item">Cennik</a></li>
-                <li><a href="/faq" class="nav__item">Faq</a></li>
-            </ul>
-        </nav>
-    </div>
+      <nav>
+        <ul>
+            <li><a href="/">HOME</a></li>
+            <li><a href="/cv.html">CV</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/blog.html">Blog</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+        </ul>
+    </nav>
 
     <div class="header">
         <div class="header__title">
@@ -63,8 +263,6 @@
         <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
-
-    <script src="main.js"></script>
 </body>
 
 </html>
