--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <style>
         body {
             background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
+            font-family: 'Sora', sans-serif;
+            line-height: 1.6;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -23,12 +24,6 @@
             padding: 0;
         }
         /* Dodaj własne style i animacje */
-    body {
-        font-family: 'Sora', sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-    }
     #tooltip .icon {
         margin: 0 10px;
         color: #334;
@@ -217,16 +212,18 @@
 </head>
 
 <body>
-      <nav>
-        <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="/cv.html">CV</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-            <li><a href="/about.html">About Me</a></li>
-            <li><a href="/blog.html">Blog</a></li>
-            <li><a href="/projects.html">Projects</a></li>
-        </ul>
-    </nav>
+    <div class="navbar">
+        <a href="/" class="logo"><img src="img/logo.png" alt="Logo"></a>
+        <nav>
+            <ul>
+                <li><a href="/" class="nav__item">Strona główna</a></li>
+                <li><a href="/onas" class="nav__item">O nas</a></li>
+                <li><a href="/oferta" class="nav__item">Oferta</a></li>
+                <li><a href="/cennik" class="nav__item">Cennik</a></li>
+                <li><a href="/faq" class="nav__item">FAQ</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <div class="header">
         <div class="header__title">
