--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="icon" type="img/png" href="img/m_logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="icon" type="image/png" href="img/m_logo.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <style>
         body {
             background-color: #f5f5f5;
-            font-family: 'Sora', sans-serif;
+            font-family: 'Victor Mono', monospace;
             line-height: 1.6;
             display: flex;
             flex-direction: column;
@@ -24,190 +24,190 @@
             padding: 0;
         }
         /* Dodaj własne style i animacje */
-    #tooltip .icon {
-        margin: 0 10px;
-        color: #334;
-        background-color: #ddd;
-        border-radius: 50%;
-        padding: 10px;
-    }
+        #tooltip .icon {
+            margin: 0 10px;
+            color: #334;
+            background-color: #ddd;
+            border-radius: 50%;
+            padding: 10px;
+        }
 
-    .icon {
-        transition: transform .2s;
-    }
+        .icon {
+            transition: transform .2s;
+        }
 
-    .icon:hover {
-        transform: scale(1.2);
-    }
-    .icon {
-        margin: 10px;
-    }
-    .navbar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
-        padding: 1rem;
-        text-align: center;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .logo img {
-        width: 90px;
-    }    
-    nav {
-            background-color: #222;
-            padding: 10px 0;
+        .icon:hover {
+            transform: scale(1.2);
+        }
+        .icon {
+            margin: 10px;
+        }
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo img {
+            width: 90px;
+        }    
+        nav {
+                background-color: #222;
+                padding: 10px 0;
+                text-align: center;
+            }
+
+            nav ul {
+                list-style-type: none;
+                padding: 0;
+            }
+
+            nav ul li {
+                display: inline;
+                margin: 0 15px;
+            }
+
+            nav ul li a {
+                font-size: 18px;
+                font-weight: bold;
+                text-decoration: none;
+                color: #ccc;
+                transition: color 0.3s, border-bottom-color 0.3s;
+                border-bottom: 2px solid transparent;
+                position: relative;
+            }
+
+            nav ul li a:before {
+                content: "";
+                position: absolute;
+                width: 0;
+                height: 2px;
+                bottom: 0;
+                left: 0;
+                background-color: #fff;
+                visibility: hidden;
+                transition: all 0.3s ease-in-out;
+            }
+
+            nav ul li a:hover {
+                color: #fff;
+                border-bottom-color: #fff;
+            }
+    
+            nav ul li a:hover:before {
+                visibility: visible;
+                width: 100%;
+            }
+
+            nav ul li a.active {
+                color: #fff;
+                border-bottom-color: #fff;
+            }
+        .nav {
+            position: relative;
+            transition: transform 0.3s ease;
+        }
+
+        .nav:hover {
+            transform: translateY(-3px);
+        }
+        .header {
+            background-image: url('img/header-bg.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 70vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
         }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
+        .header__text {
+            font-size: 2.5rem;
+            color: #fff;
+            margin-bottom: 1rem;
         }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            font-size: 18px;
+        .header__text--colorized {
+            color: #f55;
             font-weight: bold;
+        }
+        .header__cta {
             text-decoration: none;
-            color: #ccc;
-            transition: color 0.3s, border-bottom-color 0.3s;
-            border-bottom: 2px solid transparent;
-            position: relative;
-        }
-
-        nav ul li a:before {
-            content: "";
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #fff;
-            visibility: hidden;
-            transition: all 0.3s ease-in-out;
-        }
-
-        nav ul li a:hover {
             color: #fff;
-            border-bottom-color: #fff;
+            font-size: 1.2rem;
+            background-color: #f55;
+            padding: 1rem 2rem;
+            border-radius: 5px;
+        }
+        .section {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        .section__heading {
+            font-size: 2rem;
+            color: #f55;
+            margin-bottom: 2rem;
+            transition: transform 0.3s ease;
         }
 
-        nav ul li a:hover:before {
-            visibility: visible;
+        .section__heading:hover {
+            transform: scale(1.2);
+        }
+        .about-us__textbox {
+            max-width: 600px;
+            margin: 0 auto;
+        }    
+        .about-us__text {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            margin-bottom: 1rem;
+            color: #333;
+        }
+        .about-us__link {
+            color: #f55;
+            text-decoration: underline;
+        }
+        .about-us__box {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 2rem;
+        }
+        .about-us__img {
             width: 100%;
+            max-width: 400px;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 1rem;
         }
-
-        nav ul li a.active {
+        .footer {
+            background-color: #333;
             color: #fff;
-            border-bottom-color: #fff;
+            text-align: center;
+            padding: 2rem;
         }
-    .nav {
-        position: relative;
-        transition: transform 0.3s ease;
-    }
+        .footer__text {
+            font-size: 1rem;
+            color: #fff;
+        }
+        .footer__link {
+            color: #f55;
+            text-decoration: underline;
+        }
+        .section__heading, .about-us__text, .about-us__img {
+            transition: transform 0.3s ease;
+        }
 
-    .nav:hover {
-        transform: translateY(-3px);
-    }
-    .header {
-        background-image: url('img/header-bg.jpg');
-        background-size: cover;
-        background-position: center;
-        height: 70vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-    .header__text {
-        font-size: 2.5rem;
-        color: #fff;
-        margin-bottom: 1rem;
-    }
-    .header__text--colorized {
-        color: #f55;
-        font-weight: bold;
-    }
-    .header__cta {
-        text-decoration: none;
-        color: #fff;
-        font-size: 1.2rem;
-        background-color: #f55;
-        padding: 1rem 2rem;
-        border-radius: 5px;
-    }
-    .section {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 2rem;
-    }
-    .section__heading {
-        font-size: 2rem;
-        color: #f55;
-        margin-bottom: 2rem;
-        transition: transform 0.3s ease;
-    }
-
-    .section__heading:hover {
-        transform: scale(1.2);
-    }
-    .about-us__textbox {
-        max-width: 600px;
-        margin: 0 auto;
-    }    
-    .about-us__text {
-        font-size: 1.1rem;
-        line-height: 1.8;
-        margin-bottom: 1rem;
-        color: #333;
-    }
-    .about-us__link {
-    color: #f55;
-    text-decoration: underline;
-    }
-    .about-us__box {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 2rem;
-    }
-    .about-us__img {
-        width: 100%;
-        max-width: 400px;
-        height: auto;
-        border-radius: 5px;
-        margin-bottom: 1rem;
-    }
-    .footer {
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 2rem;
-    }
-    .footer__text {
-        font-size: 1rem;
-        color: #fff;
-    }
-    .footer__link {
-        color: #f55;
-        text-decoration: underline;
-    }
-    .section__heading, .about-us__text, .about-us__img {
-        transition: transform 0.3s ease;
-    }
-
-    .section__heading:hover, .about-us__text:hover, .about-us__img:hover {
-        transform: scale(1.1);
-    }
+        .section__heading:hover, .about-us__text:hover, .about-us__img:hover {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 
