--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
                 <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src="img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </section>
     </main>
