--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            transition: transform .2s;
+        }
+        .header:hover {
+              transform: scale(1.2);
         }
         .header__text {
             font-size: 2.5rem;
