--- a/kontakt.html
+++ b/kontakt.html
@@ -6,72 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Website</title>
+    link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
     <style>
       /* Dodaj własne style i animacje */
+        body{
+            font-family: 'Victor Mono', monospace;
+        }
 
 /* Sekcja Kontakt */
-.contact__container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 2rem;
-}
+        .contact__container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
 
-.contact__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
+        .contact__info {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
 
-.contact__item {
-    display: flex;
-    align-items: center;
-    margin: 10px;
-}
+        .contact__item {
+            display: flex;
+            align-items: center;
+            margin: 10px;
+        }
 
-.contact__item i {
-    margin-right: 10px;
-    font-size: 24px;
-    color: #f55;
-}
+        .contact__item i {
+            margin-right: 10px;
+            font-size: 24px;
+            color: #f55;
+        }
 
-.contact__item p {
-    font-size: 16px;
-    color: #333;
-}
+        .contact__item p {
+            font-size: 16px;
+            color: #333;
+        }
 
 /* Stopka (Footer) */
-.footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 2rem;
-}
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 2rem;
+        }
 
-.footer__social {
-    margin-bottom: 1rem;
-}
+        .footer__social {
+            margin-bottom: 1rem;
+        }
 
-.footer__social-icon {
-    color: #fff;
-    font-size: 24px;
-    margin: 0 10px;
-    text-decoration: none;
-}
+        .footer__social-icon {
+            color: #fff;
+            font-size: 24px;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        
+        .footer__text {
+            font-size: 1rem;
+            color: #fff;
+        }
 
-.footer__text {
-    font-size: 1rem;
-    color: #fff;
-}
-
-.footer__link {
-    color: #f55;
-    text-decoration: underline;
-}
+        .footer__link {
+            color: #f55;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
