--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitness Website</title>
-    link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Fitness Website - KONTAKT</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,7 +113,7 @@
             <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
             <!-- Dodaj tutaj inne ikonki social media -->
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 
