--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="pl">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fitness Website - FAQ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/15493d7b77.js" crossorigin="anonymous"></script>
+    <style>
+        /* Dodaj własne style i animacje */
+        body {
+            font-family: 'Victor Mono', monospace;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Reszta stylów z sekcji Navbar, Header i Footer */
+        /* ... Wstaw pozostałe style CSS tutaj ... */
+
+        /* Sekcja FAQ */
+        .faq__container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .faq__text {
+            font-size: 2rem;
+            color: #f55;
+            margin-bottom: 2rem;
+            transition: transform 0.3s ease;
+        }
+
+        .faq__text:hover {
+            transform: scale(1.2);
+        }
+
+        .faq__question {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+
+        .faq__answer {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            color: #333;
+            margin-bottom: 2rem;
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Navbar i pozostałe sekcje -->
+
+    <!-- Sekcja FAQ -->
+    <section class="section faq" id="faq">
+        <div class="faq__container">
+            <h2 class="section__heading faq__text">FAQ</h2>
+            <div class="faq__question">
+                <p class="faq__question">Pytanie 1:</p>
+                <p class="faq__answer">Odpowiedź na pytanie 1.</p>
+            </div>
+            <div class="faq__question">
+                <p class="faq__question">Pytanie 2:</p>
+                <p class="faq__answer">Odpowiedź na pytanie 2.</p>
+            </div>
+            <div class="faq__question">
+                <p class="faq__question">Pytanie 3:</p>
+                <p class="faq__answer">Odpowiedź na pytanie 3.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer__social">
+            <a href="#" class="footer__social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="footer__social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+                class="footer__link">Privacy Policy</a></p>
+    </footer>
+</body>
+
+</html>
