--- a/cennik.html
+++ b/cennik.html
@@ -153,7 +153,7 @@ body{
             <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
             <!-- Dodaj tutaj inne ikonki social media -->
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 
