--- a/dolaczdonas.html
+++ b/dolaczdonas.html
@@ -66,7 +66,7 @@
     <section class="section join-us" id="joinus">
         <div class="join-us__container">
             <h2 class="section__heading join-us__text">Dołącz do nas!</h2>
-            <a href="#contact" class="join-us__link">Skontaktuj się z nami</a>
+            <a href="/kontact" class="join-us__link">Skontaktuj się z nami</a>
         </div>
     </section>
 
@@ -77,7 +77,7 @@
             <a href="#" class="footer__social-icon"><i class="fab fa-twitter"></i></a>
             <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 </body>
