--- a/faq.html
+++ b/faq.html
@@ -88,7 +88,7 @@
             <a href="#" class="footer__social-icon"><i class="fab fa-twitter"></i></a>
             <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 </body>
