--- a/oferta.html
+++ b/oferta.html
@@ -135,7 +135,7 @@
             <a href="#" class="footer__icon"><i class="fab fa-instagram"></i></a>
             <a href="#" class="footer__icon"><i class="fab fa-twitter"></i></a>
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 </body>
