--- a/onas.html
+++ b/onas.html
@@ -96,14 +96,14 @@
                     analizowania ich postępów i codziennej komunikacji. Wykonuj swoją pracę lepiej, szybciej i
                     gdziekolwiek
                     się znajdujesz. LOGO dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
-                <a href="#contact" class="about-us__text about-us__link">Dołącz do nas!</a>
+                <a href="/kontact" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
-                <img src="img/aboutus1.jpg" alt="Dwoje ludzi robiących pompki patrzących na siebie."
+                <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
                     class="about-us__img about-us__img--desktop">
-                <img src="img/aboutus2.jpg" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
+                <img src="img/aboutus2.png" alt="Ćwiczacy ludzie w pozycji klęczącej na jednej nodze."
                     class="about-us__img">
-                <img src="img/aboutus3.jpg" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
+                <img src="img/aboutus3.png" alt="Ćwiczący ludzie wykonujący różne pozy." class="about-us__img">
             </div>
         </div>
     </section>
@@ -115,7 +115,7 @@
             <a href="#" class="footer__social-icon"><i class="fab fa-twitter"></i></a>
             <a href="#" class="footer__social-icon"><i class="fab fa-instagram"></i></a>
         </div>
-        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="#privacy"
+        <p class="footer__text">All rights reserved &copy; 2023 Fitness Website | <a href="/privacy"
                 class="footer__link">Privacy Policy</a></p>
     </footer>
 </body>
