--- a/onas.html
+++ b/onas.html
@@ -91,12 +91,12 @@
         <div class="about-us__container">
             <h2 class="section__heading about-us__text">O nas</h2>
             <div class="about-us__textbox">
-                <p class="about-us__text">LOGO to narzędzie służące do zarządzania planami treningowymi Twoich
+                <p class="about-us__text">FittnesGym to narzędzie służące do zarządzania planami treningowymi Twoich
                     zawodników,
                     analizowania ich postępów i codziennej komunikacji. Wykonuj swoją pracę lepiej, szybciej i
                     gdziekolwiek
-                    się znajdujesz. LOGO dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
-                <a href="/kontact" class="about-us__text about-us__link">Dołącz do nas!</a>
+                    się znajdujesz. FittnesGym dla entuzjastów sportu - sprawdź instrukcję tutaj</p>
+                <a href="/kontakt" class="about-us__text about-us__link">Dołącz do nas!</a>
             </div>
             <div class="about-us__box">
                 <img src="img/aboutus1.png" alt="Dwoje ludzi robiących pompki patrzących na siebie."
