--- a/dolaczdonas.html
+++ b/dolaczdonas.html
@@ -66,7 +66,7 @@
     <section class="section join-us" id="joinus">
         <div class="join-us__container">
             <h2 class="section__heading join-us__text">Dołącz do nas!</h2>
-            <a href="/kontact" class="join-us__link">Skontaktuj się z nami</a>
+            <a href="/kontakt" class="join-us__link">Skontaktuj się z nami</a>
         </div>
     </section>
 
