--- a/cennik.html
+++ b/cennik.html
@@ -127,7 +127,7 @@ body{
                     <li>Indywidualne treningi</li>
                     <li>Porady dietetyka</li>
                 </ul>
-                <a href="#" class="pricing__cta">Wybieram ten plan</a>
+                <a href="/pakiet1" class="pricing__cta">Wybieram ten plan</a>
             </div>
             <div class="pricing__plan">
                 <h3 class="pricing__title">Premium</h3>
@@ -140,7 +140,7 @@ body{
                     <li>Sauna i jacuzzi</li>
                     <li>Masaże relaksacyjne</li>
                 </ul>
-                <a href="#" class="pricing__cta">Wybieram ten plan</a>
+                <a href="/pakiet2" class="pricing__cta">Wybieram ten plan</a>
             </div>
         </div>
     </section>
